packages/frontend/src/styles.scss
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

@import "~swiper/swiper-bundle.css";


@font-face {
  font-family: "hollyfilms";
  src: url("assets/fonts/HollyFont.ttf");
}

html {
  height: 100vh;
  width: 100vw;
}

body {
  height: 100%;
  width: 100%;
  margin: 0;
  @apply bg-base-500;
}

.gradient-colors {
  @apply from-green-400 to-blue-500;
}

.linecap-round {
  stroke-linecap: round;
}

@keyframes progress-1 {
  from {
    stroke-dashoffset: 360;
  }
  to {
    stroke-dashoffset: 100;
  }
}

.cdk-virtual-scroll-content-wrapper {
  width: 100% !important;
}

iframe {
  pointer-events: none;
  position: absolute;
  height: 100%;
  width: 100%;
}

// Swiper

:root {
  --swiper-navigation-color: #fff;
  --swiper-pagination-color: #fff;
  --swiper-pagination-bullet-inactive-color: #fff;
}

// Animated backgrounds

.gradiant-animated {
  @apply bg-gradient-to-r gradient-colors;
  background-size: 400% 400%;
  animation: animated-bg 15s ease infinite;
}

.showcase-bg {
  @apply bg-gradient-radial from-base-100 to-base-700;
  background-size: 400% 400%;
  animation: animated-bg 15s ease infinite;
}

@keyframes animated-bg {
  0% {
    background-position: 0% 0%;
  }
  50% {
    background-position: -50% 100%;
  }
  100% {
    background-position: 0% 0%;
  }
}

// Animations for showcase letters animations

.letter {
  display: inline-block;
  position: relative;
  float: left;
  transform: translateZ(25px);
  transform-origin: 50% 50% 25px;
}

.letter.out {
  transform: rotateX(90deg);
  transition: transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.letter.behind {
  transform: rotateX(-90deg);
}

.letter.in {
  transform: rotateX(0deg);
  transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

